[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://visual_battle_test.gd" id="1_visual"]
[ext_resource type="Script" path="res://auto_battler.gd" id="2_battler"]

[node name="VisualBattleTest" type="Node2D"]
script = ExtResource("1_visual")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="AutoBattler" type="Node2D" parent="."]
script = ExtResource("2_battler")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.1, 0.1, 0.15, 1)
z_index = -1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 40.0
text = "Start Battle"

[node name="ResultLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 150.0
text = "Click Start to begin battle"